// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattedDate displays a formatted date 1`] = `
<Fragment>
  <Tooltip
    content="Jan 1, 2020, 12:00:00 AM"
    entryDelay={200}
    exitDelay={100}
    position="auto"
  >
    <span>
      Jan 1, 2020
    </span>
  </Tooltip>
</Fragment>
`;

exports[`FormattedDate displays a relative timestamp if the date is in the last 24h 1`] = `
<Fragment>
  <Tooltip
    content="Jan 1, 2020, 12:00:00 AM"
    entryDelay={200}
    exitDelay={100}
    position="auto"
  >
    <span>
      0 seconds ago
    </span>
  </Tooltip>
</Fragment>
`;

exports[`FormattedDate displays full date and time when fullDateAndTime prop is passed 1`] = `
<Fragment>
  <span>
    Jan 1, 2020, 12:00:00 AM
  </span>
</Fragment>
`;

exports[`FormattedDate displays the "on" preposition before the date when preposition prop is passed 1`] = `
<Fragment>
  <Tooltip
    content="Jan 1, 2020, 12:00:00 AM"
    entryDelay={200}
    exitDelay={100}
    position="auto"
  >
    <span>
      on Jan 1, 2020
    </span>
  </Tooltip>
</Fragment>
`;

exports[`FormattedDate renders a tooltip with the complete date and time info 1`] = `
<Fragment>
  <Tooltip
    content="Jan 1, 2020, 12:00:00 AM"
    entryDelay={200}
    exitDelay={100}
    position="auto"
  >
    <span>
      Jan 1, 2020
    </span>
  </Tooltip>
</Fragment>
`;
